fixed bad experience on mobile

--- a/minisite/static/docs.css
+++ b/minisite/static/docs.css
@@ -1,6 +1,7 @@
 html, body {
 	background-color: #fdfdfd;
 	font-family: 'Roboto', sans-serif;
+	overflow-x: hidden;
 }
 
 ::selection {
@@ -10,6 +11,12 @@ html, body {
 
 .container {
 	max-width: 960px;
+}
+
+@media (max-width: 978px) {
+	.content {
+		padding: 10px;
+	}
 }
 
 .footer {
